Apache Tez Change Log
=====================

Release 0.9.0: Unreleased

INCOMPATIBLE CHANGES

ALL CHANGES:

  TEZ-3271. Provide mapreduce failures.maxpercent equivalent.
  TEZ-3222. Reduce messaging overhead for auto-reduce parallelism case.
  TEZ-3547. Add TaskAssignment Analyzer.
  TEZ-3508. TestTaskScheduler cleanup.
  TEZ-3536. NPE in WebUIService start when host resolution fails.
  TEZ-3269. Provide basic fair routing and scheduling functionality via custom VertexManager and EdgeManager.
  TEZ-3534. Differentiate thread names on Fetchers, minor changes to shuffle shutdown code.
  TEZ-3491. Tez job can hang due to container priority inversion.
  TEZ-3533. ShuffleScheduler should shutdown threadpool on exit.
  TEZ-3477. MRInputHelpers generateInputSplitsToMem public API modified
  TEZ-3465. Support broadcast edge into cartesian product vertex and forbid other edges.
  TEZ-3493. DAG submit timeout cannot be set to a month
  TEZ-3505. Move license to the file header for TezBytesWritableSerialization
  TEZ-3486. COMBINE_OUTPUT_RECORDS/COMBINE_INPUT_RECORDS are not correct
  TEZ-3247. Add more unit test coverage for container reuse.
  TEZ-3215. Support for MultipleOutputs.
  TEZ-3097. Flaky test: TestCommit.testDAGCommitStartedEventFail_OnDAGSuccess.
  TEZ-3487. Improvements in travis yml file to get builds to work.
  TEZ-3405. Support ability for AM to kill itself if there is no client heartbeating to it.
  TEZ-3483. Create basic travis yml file for Tez.
  TEZ-3452. Auto-reduce parallelism calculation can overflow with large inputs
  TEZ-3439. Tez joinvalidate fails when first input argument size is bigger than the second.
  TEZ-3430. Make split sorting optional.
  TEZ-3466. Tez classpath building to mimic mapreduce classpath building.
  TEZ-3453. Correct the downloaded ATS dag data location for analyzer.
  TEZ-3449. Fix Spelling typos.
  TEZ-3464. Fix findbugs warnings in tez-dag mainLoop